# api-server

./: .air.toml  .claudeignore  .dockerignore  .editorconfig  .env_template  .gitignore  CHANGELOG.md  CHANGELOG_CLAUDE.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.MD  api_server_suite_test.go  coverage.out  docker-compose.yml  go.mod  go.sum  loggerConfig.go  main.go  nginx.conf  profile.cov
.github/workflows/: docker-image.yml
api/: assign_device.go  assigndevice.go  auth.go  devices.go  devices_values.go  devicesvalues.go  fcm_token.go  homes.go  keepalive.go  login_github.go  logingithub.go  oauth2_app_github.go  oauth2_common.go  oauth2_web_github.go  online.go  profiles.go  register.go
api-devices/: .air.toml  .env  .env_prod  Dockerfile  Makefile  docker-compose.yml  go.mod  go.sum  loggerConfig.go  main.go
api-devices/amqp-publisher/: amqp-publisher.go
api-devices/api/: devicesGrpc.go  registerGrpc.go
api-devices/cert/: ca-cert.pem  ca-cert.srl  ca-key.pem  gen.sh  server-cert.pem  server-ext.cnf  server-key.pem  server-req.pem
api-server/: .air.toml  .dockerignore  .env  .env_prod  Dockerfile  Makefile  credentials.json  go.mod  go.sum  index-websocket-example.html  loggerConfig.go  main.go
auth/: auth_middleware.go  oauth2_github.go  oauth2_github_test.go
certbot/: Dockerfile  run.sh
customerrors/: grpcSendError.go  registerError.go
db/: database.go
device/: device.ino  secrets.h.template
docs/: air-conditioner-icon.psd  certbot-install.md  devices-install.md  hetzner-install.md  local-development.md  other.md
esp32-configurator/: .editorconfig  .gitignore  Dockerfile  requirements.txt  setup.py
gui/: .dockerignore  Dockerfile  README.md  certbot-renew.sh  certbotrenew.sh  package-lock.json  package.json  run.sh  upgrade-certbot.sh  upgradecertbot.sh
init_config/: environment.go  init.go  logger_config.go  routes.go
initialization/: environment.go  environment_test.go  logger_config.go  server.go  start.go
integration_tests/: assigndevices_test.go  auth_test.go  devices_test.go  devicesvalues_test.go  fcmtoken_test.go  homes_test.go  keepalive_test.go  logingithub_test.go  online_test.go  profiles_test.go  register_test.go  tests_suite_test.go
kubernetes-manifests/: api-devices.yaml  api-server.yaml  gui.yaml  ingress.yaml  metalb.yaml  mosquitto.yaml  namespace.yaml  persistent-volume.yaml  rabbitmq.yaml
models/: app_login_code.go  device.go  home.go  keep_alive.go  login_url.go  oauth2_github.go  online.go  profile.go  refresh_token.go  room.go
mosquitto/: Dockerfile  certbot-renew.sh  certbotrenew.sh  init-crond.sh  mosquitto.conf  run.sh  upgrade-certbot.sh  upgradecertbot.sh
ng-gui/: README.md  angular.json  package-lock.json  package.json
react-gui/: .dockerignore  .env  .env.production  Dockerfile  nginx.conf  package-lock.json  package.json  run.sh
sensors/consumer/: .editorconfig  .env  Cargo.toml  Dockerfile
sensors/consumer/src/: lib.rs  main.rs
sensors/consumer/src/amqp/: mod.rs
sensors/consumer/src/db/: mod.rs  sensor.rs
sensors/consumer/src/models/: message.rs  mod.rs  payload_trait.rs  sensor.rs
sensors/producer/: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  log4rs.yaml
sensors/producer/src/: amqp.rs  lib.rs  main.rs
sensors/producer/src/amqp/: mod.rs
sensors/producer/src/models/: message.rs  mod.rs  notification.rs  payload_trait.rs  topic.rs
sensors/register/: .dockerignore  .env  Cargo.toml  Dockerfile  Makefile  Rocket.toml  rustfmt.toml
sensors/register/src/: lib.rs  main.rs
sensors/register/src/catchers/: mod.rs
sensors/register/src/db/: mod.rs  sensor.rs
sensors/register/src/errors/: api_error.rs
sensors/register/src/models/: inputs.rs  mod.rs  sensor.rs
sensors/register/src/routes/: api.rs
sensors/register/src/tests/: mod.rs
server/: Makefile  go.mod  go.sum  main.go  main.go_old
test_utils/: auth_utils.go  db_utils.go
testuutils/: authUtils.go  auth_utils.go  dbUtils.go  db_utils.go
utils/: api_token_crypto.go  cookies.go  features.go  features_test.go  grpc.go  http.go  jwt.go  pkce.go  random.go  session.go  slice_utils.go  slice_utils_test.go  validator.go
(+251 files in other folders)
