[package]
name = "rust-consumer"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "consumer"
path = "src/main.rs"

[lib]
name = "consumer"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"

[dependencies]
lapin = "2.1.1"
tokio = { version = "1.17.0", features = ["full"] }
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
mongodb = "2.1.0"
dotenv = "0.15.0"
futures = "0.3"
futures-lite = "^1.7"

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"