[package]
name = "rust-producer"
version = "1.0.0"
edition = "2021"

[dependencies]
lapin = "2.1.1"
paho-mqtt = "0.11"
async-std = "1"
libc = "0.2"
futures = "0.3"
futures-lite = "^1.7"
futures-timer = "3.0"
log = "0.4.17"
env_logger = "0.9.0"
async-channel = "1.6"
async-global-executor = "^2.0"
tokio = { version = "1.17.0", features = ["full"] }
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
lazy_static = "1.4.0"

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"