[package]
name = "ks89-producer"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "producer"
path = "src/main.rs"

[lib]
name = "producer"
path = "src/lib.rs"

#[profile.release]
#codegen-units = 1
#lto = "fat"
#opt-level = 3
#panic = "abort"

[dependencies]
lapin = "2.1.1"
tokio = { version = "1.17.0", features = ["full"] }
tokio-executor-trait = "2.1.0"
tokio-reactor-trait = "1.1.0"
paho-mqtt = "0.11"
libc = "0.2"
log = "0.4.17"
log4rs = { version = "1.1.1", features = ["console_appender", "rolling_file_appender"] }
dotenvy = "0.15.5"
futures = "0.3"
futures-lite = "^1.7"

# The core APIs, including the Serialize and Deserialize traits. Always
# required when using Serde. The "derive" feature is only required when
# using #[derive(Serialize, Deserialize)] to make Serde work with structs
# and enums defined in your crate.
serde = { version = "1.0", features = ["derive"] }

# Each data format lives in its own crate; the sample code below uses JSON
# but you may be using a different one.
serde_json = "1.0"