[package]
name = "rust-register"
version = "1.0.0"
edition = "2021"

[[bin]]
name = "register"
path = "src/main.rs"

[lib]
name = "register"
path = "src/lib.rs"

[profile.release]
codegen-units = 1
lto = "fat"
opt-level = 3
panic = "abort"

[dependencies]
rocket = { version = "0.5.0-rc.2", features = ["uuid", "secrets", "json"] }
serde = "1.0.144"
uuid = { version = "1.1.2", features = ["v4", "fast-rng", "macro-diagnostics"] }
log = "0.4.17"
log4rs = { version = "1.1.1", features = ["console_appender", "rolling_file_appender"] }
mongodb = "2.1.0"
dotenvy = "0.15.5"
futures = "0.3"
serde_json = "1.0.85"